# ITSMAnalysis

./: .env  .gitignore  README.md  main.py  push_data.py  pyproject.toml  requirements.txt  standard_cp_regression.ipynb  test_mongodb.py
data/: ITSM_cleaned.csv  category_mappings.json
itsm_feature_repo/feature_repo/: example_repo.py  feature_store.yaml  feature_store0.yaml  feature_view.py
itsm_feature_repo/feature_repo/data/: driver_stats.parquet
src/itsm_analysis/: main.py  test_imports.py
src/itsm_analysis/agents/: base_agent.py  categorization_agent.py  sla_agent.py  supervisor_agent.py
src/itsm_analysis/exception/: exception.py
src/itsm_analysis/feature_repo/: feature_store.yaml  itsm_features.py
src/itsm_analysis/feature_repo/data/: itsm_cleaned.parquet  online_store.db  registry.db
src/itsm_analysis/graphs/: main_graph.py  main_state.py
src/itsm_analysis/ingestion/: ingest_raw_data_to_mongodb.py  transform.py
src/itsm_analysis/logging/: logger.py
src/itsm_analysis/logging_config/: __init__.py  logger.py
src/itsm_analysis/tools/: tools.py
src/itsm_analysis/utils/: convert_csv_to_parquet.py
